care-australia-uat/force-app/main/default/objects/OTP__c/OTP__c.object-meta.xml
<CustomObject>
    <label>OTP</label>
    <nameField>
        <displayFormat>OTP - {0000000}</displayFormat>
        <label>OTP #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>