care-australia-uat/force-app/main/default/objects/OTP__c/fields/Expired_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date_Time__c</fullName>
    <formula>Generated_Date_Time__c  + (10/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired Date/Time</label>
    <type>DateTime</type>
</CustomField>