care-australia-uat/force-app/main/default/objects/OTP__c/fields/Login_Result__c.field-meta.xml
<CustomField>
    <fullName>Login_Result__c</fullName>
    <label>Login Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>