care-australia-uat/force-app/main/default/objects/OTP__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>OTP</relationshipLabel>
    <relationshipName>OTP</relationshipName>
    <type>Lookup</type>
</CustomField>